src/layout/_layout.scss
@use '../_lib/css-var' as *;

/*
   🏗️ 🏗️ 🏗️ 🏗️
  🏗️  LAYOUT  🏗️
   🏗️ 🏗️ 🏗️ 🏗️
*/

.page {
  --page-h-header: 110px;
  --page-h-footer: 329px;

  @media screen and (max-width: 1500px) {
    --page-h-footer: 329px;
  }
  @media screen and (max-width: 1000px) {
    --page-h-footer: 545px;
  }
  @media screen and (max-width: 500px) {
    --page-h-footer: 710px;
  }

  @media screen and (max-width: 1200px) {
    --page-h-header: 110px;
  }
  @media screen and (max-width: 640px) {
    --page-h-header: 110px;
  }
  @media screen and (max-width: 320px) {
    --page-h-header: 110px;
  }

  --page-w-max: 1400px;
  --page-w-off: 0px;
  --page-w-gap: 40px;
  --page-col: 12;

  --page-w: calc(var(--page-w-max) - 2 * var(--page-w-off));

  --page-w-gaps: calc((var(--page-col) - 1) * var(--page-w-gap));
  --page-w-col: calc((var(--page-w) - var(--page-w-gaps)) / var(--page-col));

  @media screen and (max-width: 1500px) {
    --page-w-off: 40px;
    --page-w-gap: 20px;
    --page-col: 12;
    --page-w-max: 100vw;
  }

  @media screen and (max-width: 1000px) {
    --page-w-off: 20px;
    --page-w-gap: 20px;
    --page-col: 8;
  }

  @media screen and (max-width: 600px) {
    --page-w-off: 10px;
    --page-w-gap: 20px;
    --page-col: 4;
  }
}

.page {
  width: 100%;
  min-height: 100vh;
  display: grid;
  grid-template-rows: var(--page-h-header) 1fr minmax(var(--page-h-footer), auto);
}

.page__block-wrapper {
  max-width: var(--page-w);
  width: 100%;
  height: 100%;
  margin: 0 auto;
}

